--- a/public_html/css/estilo.css
+++ b/public_html/css/estilo.css
@@ -61,13 +61,25 @@ div{
     text-align: justify;
     text-justify: inter-word;
 }
-
+.carousel {
+  width: 500px;
+  margin: 0 auto;
+}
+.carousel-inner img {
+      width: 100%;
+      height: 100%;
+}
 h1 {
+    font-family: Arial, sans-serif;
     font-size: 2rem;
     color: green;
     text-align: center;
 }
 
+p{
+    font-family: Arial, sans-serif;
+   
+}
 button{
     color: orange;
 }
@@ -80,4 +92,75 @@ p{
 }
 button{
     font-size: 2rem;
+}
+.palco{
+    margin-top: 100px;
+    padding-top: 50px;
+}
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+            }
+a[href="#top"]{
+    padding:10px;
+    position:fixed;
+    top: 90%;
+    right:40px;
+    display:none;
+    font-size: 30px;
+}
+a[href="#top"]:hover{
+    text-decoration:none;
+}
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+ 
+.sidebar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  margin-left: 20px;
+  padding: 1px 16px;
+  height: 200px;
+}
+
+@media screen and (max-width: 200px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 200px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+div#dataAtual{
+    align: right;
 }
